experimenting with checker framework for dataflow